samples/_failures_safe/1761075696_b3e585_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da4f3811.c: In function ‘main’:
./samples/SAFE/__tmp_da4f3811.c:144:26: error: missing terminating " character
  144 |     mat2.cols = read_int("
      |                          ^
./samples/SAFE/__tmp_da4f3811.c:144:5: error: expected expression at end of input
  144 |     mat2.cols = read_int("
      |     ^~~~
./samples/SAFE/__tmp_da4f3811.c:144:17: error: too few arguments to function ‘read_int’
  144 |     mat2.cols = read_int("
      |                 ^~~~~~~~
./samples/SAFE/__tmp_da4f3811.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_da4f3811.c:144:5: error: expected declaration or statement at end of input
  144 |     mat2.cols = read_int("
      |     ^~~~
